--- a/desafio-aerolab/front/src/sass/Home/card.scss
+++ b/desafio-aerolab/front/src/sass/Home/card.scss
@@ -16,7 +16,7 @@
 
 .card {
   width: 260px;
-  height: 270px;
+  height: 280px;
   margin-bottom: 25px;
   margin-left: 5px;
   margin-right: 5px;
@@ -24,20 +24,21 @@
   border-radius: 5px;
   text-align: center;
   position: relative;
+  display: block;
   box-shadow: 10px 10px 20px -10px rgba(0, 0, 0, 0.2);
   .puntos {
     width: 260px;
-    height: 270px;
+    height: 280px;
     position: absolute;
     background-color: #18c6f5;
-    -webkit-transition: opacity 0.2s;
+    -webkit-transition: opacity 0.3s;
     opacity: 0;
     border-radius: 5px;
   }
   .cont {
     opacity: 0;
     width: 260px;
-    height: 270px;
+    height: 280px;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -52,6 +53,7 @@
       align-items: center;
       font-size: 26px;
       color: white;
+      margin-bottom: 10px;
     }
     .btnReedem {
       color: black;
@@ -60,8 +62,22 @@
       background: white;
     }
   }
+  .btn {
+    position: absolute;
+    left: 95%;
+    top: 4%;
+    transform: translate(-100%, 0);
+
+    .btnPuntos {
+      background-color: #0ad4fa;
+      color: white;
+      box-shadow: none;
+    }
+  }
+
   .imgCard {
-    height: 170px;
+    height: 150px;
+    margin-top: 30px; ///////
   }
   .textCard-cat {
     color: #b2b2b2;
@@ -85,6 +101,40 @@
 .card:hover .cont {
   position: absolute;
   opacity: 1;
+}
+
+.card:hover .btnPuntos {
+  background-color: white;
+  color: #0ad4fa;
+  box-shadow: none;
+  //color: white;
+}
+
+.card:hover .btnPuntos:active {
+  background-color: lightgray;
+  color: #0ad4fa;
+  box-shadow: none;
+  //color: white;
+}
+
+/* Grow Shadow */
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.hvr-grow-shadow:hover,
+.hvr-grow-shadow:focus,
+.hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 @media only screen and (max-width: 1285px) {
