--- a/desafio-aerolab/front/src/sass/Home/home.scss
+++ b/desafio-aerolab/front/src/sass/Home/home.scss
@@ -1,17 +1,27 @@
-.containerSort {
+.containerFiltros {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-content: center;
   align-items: center;
-  margin-right: 2%;
-  margin-top: 15px;
-  .grupoB {
-    margin-left: 20px;
-    .btnSort {
-      padding-left: 20px;
-      padding-right: 20px;
-      border-color: #6ee8ff;
+  margin-right: 7%;
+  margin-left: 7%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  .sort {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: center;
+    align-items: center;
+    margin-right: 2%;
+    .grupoB {
+      margin-left: 20px;
+      .btnSort {
+        padding-left: 20px;
+        padding-right: 20px;
+        border-color: #6ee8ff;
+      }
     }
   }
 }
