--- a/desafio-aerolab/front/src/App.scss
+++ b/desafio-aerolab/front/src/App.scss
@@ -1,3 +1,4 @@
 @import './sass/Home/card.scss';
 @import './sass/Home/header.scss';
 @import './sass/Home/home.scss';
+@import './sass/Home/profile.scss';
