--- a/desafio-aerolab/front/src/sass/Home/header.scss
+++ b/desafio-aerolab/front/src/sass/Home/header.scss
@@ -8,11 +8,18 @@
     justify-content: space-between;
     align-content: space-between;
     align-items: center;
-    .img {
-      height: 70px;
-      width: 70px;
-      margin-left: 2%;
+    .contNav {
+      margin-left: 10%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-content: center;
+      .img {
+        height: 70px;
+        width: 70px;
+      }
     }
+
     .itemsbar {
       display: flex;
       flex-direction: row;
@@ -20,6 +27,11 @@
       align-content: center;
       align-items: center;
       margin-right: 2%;
+      a:-webkit-any-link {
+        color: black;
+        cursor: pointer;
+        text-decoration: none;
+      }
       .btnPuntos {
         margin-left: 25px;
         height: fit-content;
