post para sumar puntos, paginacion  y filtrado de cards por cost

--- a/desafio-aerolab/front/src/sass/Home/profile.scss
+++ b/desafio-aerolab/front/src/sass/Home/profile.scss
@@ -32,6 +32,12 @@
       font-weight: 700;
       margin-bottom: 20px;
     }
+    .btnAddPoints {
+      background-color: orangered;
+      color: white;
+      box-shadow: none;
+      margin-right: 10px;
+    }
   }
 }
 
