--- a/desafio-aerolab/front/src/sass/Home/header.scss
+++ b/desafio-aerolab/front/src/sass/Home/header.scss
@@ -36,12 +36,12 @@
         margin-left: 25px;
         display: flex;
         flex-direction: row;
-        height: fit-content;
         padding: 5px 12px;
         border-radius: 25px;
         box-shadow: none;
         background-color: #ff4f00;
         color: white;
+        align-items: center;
         .coinIcon{
           margin-left: 8px;
         }
